deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 30%
  template:
    metadata:
      labels: 
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - mountPath: /etc/nginx/
              name: config
              readOnly: true
            - mountPath: /etc/nginx/ssl
              name: tls
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              port: 443
              path: /index.html
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 443
              path: /index.html
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 20
      volumes:
        - name: config
          configMap:
            name: nginx-config
        - name: tls
          secret:
            secretName: nginx-tls-secret
